vorschlaege sind nun nach häufigkeit sortiert.

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -815,6 +815,7 @@
                 <div class="suche-form-buttons">
                     <button type="submit" class="black-button">Filter anwenden</button>
                     <button type="reset" class="black-button">alle Filter löschen</button>
+                    <div class="clearfix"></div>
                 </div>
             </form>
 
