--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -393,6 +393,7 @@ hr{
     border: none;
     outline: none;
     padding: 0;
+    margin-bottom: 9px;
 }
 .input-frame-spalte{
     display: inline-block;
@@ -405,8 +406,19 @@ hr{
 .input-frame{
      margin: 0;
  }
+.input-frame .input-frame-hr-top{
+    margin-top: 12px;
+    margin-bottom: 15px;
+}
+.input-frame .input-frame-hr-bottom{
+    margin-top: 20px;
+    margin-bottom: 17px;
+}
 .input-frame .label{
     margin: 0;
+}
+.input-frame .outer-label{
+    display: block;
 }
 .input-frame .vorschlaege, .input-frame .auswahl{
     width: 49.9%;
@@ -422,6 +434,10 @@ hr{
 .input-frame .vorschlaege ul li, .input-frame .auswahl ul li{
     font-size: 13px;
     max-width: 95%;
+    line-height: 17px;
+}
+.input-frame .auswahl ul li:last-child{
+    margin-bottom: 12px;
 }
 .input-frame .vorschlaege ul li{
     white-space: nowrap;
@@ -443,6 +459,83 @@ hr{
     vertical-align: top;
 }
 
+.jahr-auswahl{
+    margin-top: 3px;
+    margin-bottom: -9px;
+}
+.jahr-auswahl .jahr-auswahl-text{
+    vertical-align: top;
+}
+.jahr-auswahl .jahr-auswahl-button{
+    vertical-align: initial;
+    display: inline;
+    width: 8px;
+    height: 8px;
+    margin-left: 12px;
+    padding-bottom: 3px;
+}
+.jahr-auswahl .jahr-auswahl-button img{
+    vertical-align: text-top;
+}
+.jahr-frame.active .jahr-auswahl{
+    display: none!important;
+}
+.outer-label[for=Titel-add]{
+    margin-top: 5px;
+}
+
+.suche-form-buttons{
+    margin-top: 30px;
+    margin-bottom: 50px;
+    margin-right: 0;
+    width: 100%;
+}
+.suche-form-buttons button{
+    float: right;
+    margin-left: 50px;
+}
+
+
+/* ion Range Slider */
+.irs .irs-bar{
+    background-color: white;
+    border-top: 1px black solid;
+    border-bottom: 1px black solid;
+}
+.irs .irs-line{
+    background-color: black;
+    border: none;
+}
+.irs .irs-handle, .irs .irs-handle:hover, .irs .irs-handle.state_hover{
+    background-color: black;
+    border-radius: 25px;
+    top: 21px;
+    width: 24px;
+    height: 24px;
+    transform: none;
+}
+.irs .irs-single{
+    visibility: hidden!important;
+}
+.irs .irs-from, .irs .irs-to{
+    visibility: visible!important;
+    background: none;
+    color: black;
+    font-size: 18px;
+}
+.irs .irs-to{
+    top: 48px;
+}
+.irs .irs-from{
+    top: -6px;
+}
+.irs--square{
+    width: 29.7%;
+    float: right;
+    position: relative;
+    top: -7px;
+    right: 20px;
+}
 .input-frame.inactive .inner-label, .input-frame.inactive hr, .input-frame.inactive .add-input, .input-frame.inactive .vorschlaege, .input-frame.inactive .irs{
     display: none;
 }
@@ -459,16 +552,6 @@ hr{
     visibility: visible!important;
 }
 
-.suche-form-buttons{
-    margin-top: 30px;
-    margin-bottom: 50px;
-    margin-right: 0;
-    width: 100%;
-}
-.suche-form-buttons button{
-    float: right;
-    margin-left: 50px;
-}
 
 @media (max-width: 1012px) {
     .input-frame-spalte{
@@ -479,7 +562,9 @@ hr{
 
 }
 @media (max-width: 768px) {
-
+    .irs--square{
+        width: 50%;
+    }
 }
 @media (max-width: 576px) {
 
@@ -547,48 +632,6 @@ hr{
 
 
 
-
-
-
-
-/* ion Range Slider */
-.irs .irs-bar{
-    background-color: white;
-    border-top: 1px black solid;
-    border-bottom: 1px black solid;
-}
-.irs .irs-line{
-    background-color: black;
-    border: none;
-}
-.irs .irs-handle, .irs .irs-handle:hover, .irs .irs-handle.state_hover{
-    background-color: black;
-    border-radius: 25px;
-    top: 21px;
-    width: 24px;
-    height: 24px;
-    transform: none;
-}
-.irs .irs-single{
-    visibility: hidden!important;
-}
-.irs .irs-from, .irs .irs-to{
-    visibility: visible!important;
-    background: none;
-    color: black;
-    font-size: 18px;
-}
-.irs .irs-to{
-    top: 48px;
-}
-.irs .irs-from{
-    top: -6px;
-}
-
-.irs--square{
-    width: 33.3%;
-    float: right;
-}
 
 
 
