jahrSlider bug gefixt.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -72,7 +72,7 @@
                             alt="Favoriten"
                             src="{{ asset('assets/images/Archiv_Symbole_Mobil_Auswahl_voll.svg') }}"
                             style="display: none;"
-                        /><div class="alle-fav-button-counter" style="display:none;"><span>0</span></div>
+                        /><div class="alle-fav-button-counter" style="display:none;"><span></span></div>
                     </a>
                 </div>
             </div>
