archivierungen werden nach jahr sortiert. Kleinigkeiten.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -160,7 +160,7 @@
                 <ul>
                     <li><a href="{{ path('_dasProjekt') }}">Das Projekt</a></li>
                     <li><a href="{{ path('_arbeitenImKontext') }}">Arbeiten im Kontext</a></li>
-                    {#<li><a href="#">Möbel-Archiv</a></li>#}
+                    <li><a href="{{ path('_moebelarchivDummy') }}">Möbel-Archiv</a></li>
                     <li class="close-burger-trigger"><a href="{{ path('_kontakt') }}#">Kontakt</a></li>
                     <li class="close-burger-trigger"><a href="{{ path('_kontakt') }}#impressum">Impressum</a></li>
                     <li class="close-burger-trigger"><a href="{{ path('_kontakt') }}#datenschutz">Datenschutzerklärung</a></li>
